# rust_simple_chat_application

./: .env  Cargo.toml  Documentation, Gruppe 8.docx  README.md
.github-ci/: ci.yml
.github/workflows/: ci.yml
Drawio/: Add friend use cases.drawio  Add user to group use case.drawio  Database.drawio  Login use cases.drawio  Other use cases.drawio  Register use cases.drawio  Skizze SECSE Projekt.drawio  System archetektur.drawio
migrations/2024-04-19-164227_groups/: up.sql
migrations/2024-04-19-164734_users/: up.sql
migrations/2024-04-22-093916_group_messages/: up.sql
migrations/2024-04-22-094148_user_messages/: up.sql
migrations/2024-04-22-094208_user_groups/: down.sql  up.sql
migrations/2024-05-24-090140_user_user_friend/: down.sql  up.sql
src/: main.rs  schema.rs
src/backend/database/: db.rs  models.rs  schema.rs
src/backend/entities/: group_message_ops.rs  group_ops.rs  mod.rs  user_friend_ops.rs  user_group_ops.rs  user_message_ops.rs  user_ops.rs
src/frontend/: app.rs  group_chat.rs  home.rs  login.rs  mod.rs  register.rs  user_chat.rs
src/frontend/tabs_home/: group_tab.rs  mod.rs  setting_tab.rs  user_tab.rs
tests/backend/database/: db_tests.rs  mod.rs  models_tests.rs
tests/frontend/: app_tests.rs  group_chat_tests.rs  home_tests.rs  login_tests.rs  mod.rs  register_tests.rs  user_chat_tests.rs
tests/frontend/tabs_home/: group_tab_tests.rs  mod.rs  setting_tab_tests.rs  user_tab_tests.rs
