[package]
name = "secse24_group08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
bcrypt = "0.15.1"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11.3"
iced = {version = "0.12", features = ["image", "tokio"]}
iced_aw = {version = "0.9.3", features = ["tabs"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5.4"
chrono = "0.4"

[build-dependencies]
winres = "0.1"