[package]
name = "secse24_group08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
bcrypt = "0.15.1"
lazy_static = "1.5.0"
log = "0.4.22"
env_logger = "0.11.5"
iced = { version = "0.12", features = ["image", "tokio"] }
iced_aw = { version = "0.9.3", features = ["tabs"] }
tokio = { version = "1.39.3", features = ["full"] }
regex = "1.10.6"
chrono = "0.4"

[build-dependencies]
winres = "0.1"
